--- a/src/components/IntroModal/IntroModal.css
+++ b/src/components/IntroModal/IntroModal.css
@@ -32,7 +32,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 0.75rem;
 }
 
 .intro-video-frame {
@@ -44,11 +43,10 @@
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.08);
   width: 100%;
   max-width: 880px;
-  aspect-ratio: 16 / 9;
+  height: 105%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 0.35rem;
 }
 
 .intro-video {
