--- a/src/components/SettingsButton/SettingsButton.css
+++ b/src/components/SettingsButton/SettingsButton.css
@@ -27,17 +27,12 @@
   transform: scale(1.05);
 }
 
-.settings-button svg.rotating {
-  animation: rotate 0.6s ease-in-out;
+.settings-button svg {
+  transition: transform 0.6s ease-in-out;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(90deg);
-  }
+.settings-button svg.rotating {
+  transform: rotate(180deg);
 }
 
 @media (max-width: 768px) {
